04_results/Summary/envoy_proof_mtls1.2-gcm_20260807_120708.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1alpha3
  kind: EnvoyFilter
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1alpha3","kind":"EnvoyFilter","metadata":{"annotations":{},"name":"force-downgrade-httpbin-server","namespace":"default"},"spec":{"configPatches":[{"applyTo":"FILTER_CHAIN","match":{"context":"SIDECAR_INBOUND","listener":{"filterChain":{"destinationPort":8080,"transportProtocol":"tls"}}},"patch":{"operation":"MERGE","value":{"transport_socket":{"name":"envoy.transport_sockets.tls","typed_config":{"@type":"type.googleapis.com/envoy.extensions.transport_ [...]
    creationTimestamp: "2026-08-07T10:24:32Z"
    generation: 1
    name: force-downgrade-httpbin-server
    namespace: default
    resourceVersion: "2450"
    uid: 89952adc-fefd-49a5-830a-035eac635c34
  spec:
    configPatches:
    - applyTo: FILTER_CHAIN
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            destinationPort: 8080
            transportProtocol: tls
      patch:
        operation: MERGE
        value:
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_params:
                  cipher_suites:
                  - ECDHE-RSA-AES128-GCM-SHA256
                  tls_maximum_protocol_version: TLSv1_2
                  tls_minimum_protocol_version: TLSv1_2
    workloadSelector:
      labels:
        app: httpbin
kind: List
metadata:
  resourceVersion: ""
